# gis_utils

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yaml
src/: geojson_simplify.py  shp2geojson.py  split_by_states.py
src/tests/: test_geojson_simplify.py  test_shp2geojson.py  test_split_geojson_by_state.py
